# salmon

./: .buildinfo  .doctr-files  .gitignore  .readthedocs.yaml  .travis.yml  CITATION.cff  CNAME  CONTRIBUTING.md  Dockerfile  DockerfileDask  LICENSE.txt  MANIFEST.in  Makefile  README.md  adaptive.html  algorithms.html  alieneggs.html  api.html  colors.html  deploying.html  deps.html  developers.html  docker-compose.yml  eggs.html  env.yaml  faq.html  frontend.html  genindex.html  getting-started.html  github_deploy_key_stsievert_salmon.enc  index.html  init.html  installation.html  introduction.html  launch.sh  monitoring.html  objects.inv  offline.html  offline.txt  performance.html  (+12 more)
.circleci/: config.yml
.github/: pull_request_template.md
_sources/: adaptive.rst.txt  algorithms.rst.txt  api.rst.txt  deploying.rst.txt  deps.rst.txt  developers.rst.txt  faq.rst.txt  getting-started.rst.txt  index.rst.txt  init.rst.txt  installation.rst.txt  introduction.rst.txt  monitoring.rst.txt  offline.rst.txt  performance.rst.txt  samplers.rst.txt
_static/: documentation_options.js
ami/: configure-server.sh  host.sh  salmon.service  salmon.sh
backend/: Dockerfile  Makefile  __init__.py  launch.sh  requirements.txt
benchmarks/: active.html  adaptive.html  server.html
docs/: adaptive.rst  api.rst  conf.py  getting-started.rst  index.rst  introduction.rst  performance.rst
examples/: README.md  basic.yaml  complete.yaml  customize.yaml  datasets.py  default.yaml
frontend/: .gitattributes  Dockerfile  MANIFEST.in  launch.sh  requirements.txt  setup.cfg  setup.py
paper/: paper.bib  paper.md
performance/: Load-test-v0.2.3.ipynb  (+1 more)
(+205 files in other folders)
